--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "chatbot for habari",
   "main": "server.js",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "es6-promise": "^4.1.1",
     "express": "^4.15.3",
@@ -15,8 +18,11 @@
     "jsdom": "^11.1.0",
     "jsdom-no-contextify": "^3.1.0",
     "mongoose": "^4.11.5",
+    "morgan": "^1.8.2",
     "node-jsdom": "^3.1.5",
     "node-wit": "^4.2.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "request": "^2.81.0",
     "socket.io": "^2.0.3",
